<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.gobowl.ManagerActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mngrMainTitle"
        android:id="@+id/tvManagerMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvManagerMainTitle"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mngrTotalCustomers"
                android:id="@+id/tvTitleTotalCustomers"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/darkGray"
                android:gravity="right"
                android:id="@+id/tvTotalCustomers" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mngrVipCustomers"
                android:id="@+id/tvTitleVipCustomers"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/darkGray"
                android:gravity="right"
                android:id="@+id/tvVipCustomers" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonNewCustomer"
                android:id="@+id/buttonNewCustomer"
                android:onClick="handleClick" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonPrintCard"
                android:id="@+id/buttonPrintCard"
                android:onClick="handleClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonEditCustomer"
                android:id="@+id/buttonEditCustomer"
                android:onClick="handleClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonDeleteCustomer"
                android:id="@+id/buttonDeleteCustomer"
                android:onClick="handleClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonShowAllCustomers"
                android:id="@+id/buttonAllCustomer"
                android:onClick="handleClick" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mngrButtonDeleteAllCustomers"
                android:id="@+id/buttonDeleteAllCustomer"
                android:onClick="handleClick" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>